--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery App ♕♘</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5787/5787016.png" type="image/x-icon">  
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
